--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
         <title>Krzysztof Biegański</title>
         <meta name="description" content="Krzysztof Biegański's website">
         <meta name="author" content="Krzysztof Biegański">
+		<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:600,800" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
     </head>
     <body>
+        <div id="content"></div>
         <nav id="main-nav">
             <div id="nav-header">
                 Krzysztof Biegański
+				</div>
             </div>
             <div id="nav-bar">
                 <ul>
@@ -25,7 +27,7 @@
             </div>
         </nav>
 
-        <div id="content"></div>
+		<div id="js-error">This website requires JavaScript.</div>
 
         <script type="text/javascript" src="scripts.js"></script>
     </body>
