--- a/index.html
+++ b/index.html
@@ -2,33 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link href="css/styles.css" rel="stylesheet">
+        <link href="css/fontawesome.min.css" rel="stylesheet">
+        <link href="css/brands.min.css" rel="stylesheet">
+        <link href="css/solid.min.css" rel="stylesheet">
         <title>Krzysztof Biegański</title>
-        <meta name="description" content="Krzysztof Biegański's website">
-        <meta name="author" content="Krzysztof Biegański">
-		<link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:600,800" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.min.js"></script>
     </head>
     <body>
-        <div id="content"></div>
-        <nav id="main-nav">
-            <div id="nav-header">
-                Krzysztof Biegański
-				</div>
+        <script src="js/p5.min.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
+        <div id="content">
+            <div>
+                <h1>Krzysztof Biegański</h1>
+                <h2>Software Engineer</h2>
+                <p>Software Engineer @ <a href="https://www.siemens-digital-logistics.com/">Siemens Digital Logistics</a><br><i>July 2017 &ndash; now</i></p>
+                <p>Summer Trainee @ <a href="https://en.nokiawroclaw.pl/">Nokia Networks</a><br><i>Summer 2016</i></p>
+                <p>BSc, MSc in Computer Science @ <a href="https://pwr.edu.pl/en/">PWr</a><br><i>2014 &ndash; 2019</i></p>
+                <a class="icon" href="https://github.com/kbieganski/"><i class="fab fa-github"></i></a>
+                <a class="icon" href="https://www.linkedin.com/in/krzysztof-bieganski/"><i class="fab fa-linkedin"></i></a>
+                <a class="icon" href="mailto:krzysztof@biegan.ski"><i class="fas fa-envelope"></i></a>
             </div>
-            <div id="nav-bar">
-                <ul>
-                    <li><a href="?blog">Blog</a></li>
-                    <li><a href="?projects">Projects</a></li>
-                    <li><a href="?about_me">About me</a></li>
-                </ul>
-            </div>
-        </nav>
-
-		<div id="js-error">This website requires JavaScript.</div>
-
-        <script type="text/javascript" src="scripts.js"></script>
+        </div>
     </body>
 </html>
