--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="content">
             <div>
                 <h1>Krzysztof Biegański</h1>
-                <h2>Software Engineer</h2>
-                <p>Software Engineer @ <a href="https://www.siemens-digital-logistics.com/">Siemens Digital Logistics</a><br><i>July 2017 &ndash; now</i></p>
+                <p>Software Engineer @ <a href="https://www.antmicro.com/">Antmicro</a><br><i>April 2020 &ndash; now</i></p>
+                <p>Software Engineer @ <a href="https://www.siemens-digital-logistics.com/">Siemens Digital Logistics</a><br><i>July 2017 &ndash; April 2020</i></p>
                 <p>Summer Trainee @ <a href="https://en.nokiawroclaw.pl/">Nokia Networks</a><br><i>Summer 2016</i></p>
                 <p>BSc, MSc in Computer Science @ <a href="https://pwr.edu.pl/en/">PWr</a><br><i>2014 &ndash; 2019</i></p>
                 <a class="icon" href="https://github.com/kbieganski/"><i class="fab fa-github"></i></a>
